tests/snapshots/libsml_testing__files@DZG_DVS-7420.2V.G2_mtr1.bin.snap
---
source: tests/libsml-testing.rs
expression: s
input_file: tests/libsml-testing/DZG_DVS-7420.2V.G2_mtr1.bin
---
Ok(
    [
        Message {
            transaction_id: [210, 37, 175, 1],
            group_id: 0,
            abort_on_error: 0,
            message_body: OpenResponse {
                req_file_id: [49],
                server_id: [10, 1, 68, 90, 71, 0, 3, 158, 32, 85],
                ref_time: SecIndex(9424220),
                sml_version: 2,
            },
        },
        Message {
            transaction_id: [211, 37, 175, 1],
            group_id: 0,
            abort_on_error: 0,
            message_body: GetListResponse {
                server_id: [10, 1, 68, 90, 71, 0, 3, 158, 32, 85],
                list_name: [1, 0, 98, 10, 255, 255],
                act_sensor_time: SecIndex(9424220),
                val_list: [
                    ListEntry {
                        obj_name: [1, 0, 96, 50, 1, 1],
                        val_time: SecIndex(0),
                        unit: 0,
                        scaler: 0,
                        value: [68, 90, 71],
                    },
                    ListEntry {
                        obj_name: [1, 0, 96, 1, 0, 255],
                        val_time: SecIndex(0),
                        unit: 0,
                        scaler: 0,
                        value: [10, 1, 68, 90, 71, 0, 3, 158, 32, 85],
                    },
                    ListEntry {
                        obj_name: [1, 0, 1, 8, 0, 255],
                        status: 1835012,
                        val_time: SecIndex(0),
                        unit: 30,
                        scaler: -1,
                        value: 23536569,
                    },
                    ListEntry {
                        obj_name: [1, 0, 1, 8, 1, 255],
                        val_time: SecIndex(0),
                        unit: 30,
                        scaler: -1,
                        value: 386100,
                    },
                    ListEntry {
                        obj_name: [1, 0, 1, 8, 2, 255],
                        val_time: SecIndex(0),
                        unit: 30,
                        scaler: -1,
                        value: 23150469,
                    },
                    ListEntry {
                        obj_name: [1, 0, 2, 8, 0, 255],
                        val_time: SecIndex(0),
                        unit: 30,
                        scaler: -1,
                        value: 0,
                    },
                    ListEntry {
                        obj_name: [1, 0, 16, 7, 0, 255],
                        val_time: SecIndex(0),
                        unit: 27,
                        scaler: -2,
                        value: 622,
                    },
                ],
            },
        },
        Message {
            transaction_id: [212, 37, 175, 1],
            group_id: 0,
            abort_on_error: 0,
            message_body: CloseResponse,
        },
    ],
)
Ok(
    [
        Message {
            transaction_id: [213, 37, 175, 1],
            group_id: 0,
            abort_on_error: 0,
            message_body: OpenResponse {
                req_file_id: [49],
                server_id: [10, 1, 68, 90, 71, 0, 3, 158, 32, 85],
                ref_time: SecIndex(9424221),
                sml_version: 2,
            },
        },
        Message {
            transaction_id: [214, 37, 175, 1],
            group_id: 0,
            abort_on_error: 0,
            message_body: GetListResponse {
                server_id: [10, 1, 68, 90, 71, 0, 3, 158, 32, 85],
                list_name: [1, 0, 98, 10, 255, 255],
                act_sensor_time: SecIndex(9424221),
                val_list: [
                    ListEntry {
                        obj_name: [1, 0, 96, 50, 1, 1],
                        val_time: SecIndex(0),
                        unit: 0,
                        scaler: 0,
                        value: [68, 90, 71],
                    },
                    ListEntry {
                        obj_name: [1, 0, 96, 1, 0, 255],
                        val_time: SecIndex(0),
                        unit: 0,
                        scaler: 0,
                        value: [10, 1, 68, 90, 71, 0, 3, 158, 32, 85],
                    },
                    ListEntry {
                        obj_name: [1, 0, 1, 8, 0, 255],
                        status: 1835012,
                        val_time: SecIndex(0),
                        unit: 30,
                        scaler: -1,
                        value: 23536569,
                    },
                    ListEntry {
                        obj_name: [1, 0, 1, 8, 1, 255],
                        val_time: SecIndex(0),
                        unit: 30,
                        scaler: -1,
                        value: 386100,
                    },
                    ListEntry {
                        obj_name: [1, 0, 1, 8, 2, 255],
                        val_time: SecIndex(0),
                        unit: 30,
                        scaler: -1,
                        value: 23150469,
                    },
                    ListEntry {
                        obj_name: [1, 0, 2, 8, 0, 255],
                        val_time: SecIndex(0),
                        unit: 30,
                        scaler: -1,
                        value: 0,
                    },
                    ListEntry {
                        obj_name: [1, 0, 16, 7, 0, 255],
                        val_time: SecIndex(0),
                        unit: 27,
                        scaler: -2,
                        value: 596,
                    },
                ],
            },
        },
        Message {
            transaction_id: [215, 37, 175, 1],
            group_id: 0,
            abort_on_error: 0,
            message_body: CloseResponse,
        },
    ],
)
Ok(
    [
        Message {
            transaction_id: [216, 37, 175, 1],
            group_id: 0,
            abort_on_error: 0,
            message_body: OpenResponse {
                req_file_id: [49],
                server_id: [10, 1, 68, 90, 71, 0, 3, 158, 32, 85],
                ref_time: SecIndex(9424222),
                sml_version: 2,
            },
        },
        Message {
            transaction_id: [217, 37, 175, 1],
            group_id: 0,
            abort_on_error: 0,
            message_body: GetListResponse {
                server_id: [10, 1, 68, 90, 71, 0, 3, 158, 32, 85],
                list_name: [1, 0, 98, 10, 255, 255],
                act_sensor_time: SecIndex(9424222),
                val_list: [
                    ListEntry {
                        obj_name: [1, 0, 96, 50, 1, 1],
                        val_time: SecIndex(0),
                        unit: 0,
                        scaler: 0,
                        value: [68, 90, 71],
                    },
                    ListEntry {
                        obj_name: [1, 0, 96, 1, 0, 255],
                        val_time: SecIndex(0),
                        unit: 0,
                        scaler: 0,
                        value: [10, 1, 68, 90, 71, 0, 3, 158, 32, 85],
                    },
                    ListEntry {
                        obj_name: [1, 0, 1, 8, 0, 255],
                        status: 1835012,
                        val_time: SecIndex(0),
                        unit: 30,
                        scaler: -1,
                        value: 23536569,
                    },
                    ListEntry {
                        obj_name: [1, 0, 1, 8, 1, 255],
                        val_time: SecIndex(0),
                        unit: 30,
                        scaler: -1,
                        value: 386100,
                    },
                    ListEntry {
                        obj_name: [1, 0, 1, 8, 2, 255],
                        val_time: SecIndex(0),
                        unit: 30,
                        scaler: -1,
                        value: 23150469,
                    },
                    ListEntry {
                        obj_name: [1, 0, 2, 8, 0, 255],
                        val_time: SecIndex(0),
                        unit: 30,
                        scaler: -1,
                        value: 0,
                    },
                    ListEntry {
                        obj_name: [1, 0, 16, 7, 0, 255],
                        val_time: SecIndex(0),
                        unit: 27,
                        scaler: -2,
                        value: 621,
                    },
                ],
            },
        },
        Message {
            transaction_id: [218, 37, 175, 1],
            group_id: 0,
            abort_on_error: 0,
            message_body: CloseResponse,
        },
    ],
)
Ok(
    [
        Message {
            transaction_id: [219, 37, 175, 1],
            group_id: 0,
            abort_on_error: 0,
            message_body: OpenResponse {
                req_file_id: [49],
                server_id: [10, 1, 68, 90, 71, 0, 3, 158, 32, 85],
                ref_time: SecIndex(9424223),
                sml_version: 2,
            },
        },
        Message {
            transaction_id: [220, 37, 175, 1],
            group_id: 0,
            abort_on_error: 0,
            message_body: GetListResponse {
                server_id: [10, 1, 68, 90, 71, 0, 3, 158, 32, 85],
                list_name: [1, 0, 98, 10, 255, 255],
                act_sensor_time: SecIndex(9424223),
                val_list: [
                    ListEntry {
                        obj_name: [1, 0, 96, 50, 1, 1],
                        val_time: SecIndex(0),
                        unit: 0,
                        scaler: 0,
                        value: [68, 90, 71],
                    },
                    ListEntry {
                        obj_name: [1, 0, 96, 1, 0, 255],
                        val_time: SecIndex(0),
                        unit: 0,
                        scaler: 0,
                        value: [10, 1, 68, 90, 71, 0, 3, 158, 32, 85],
                    },
                    ListEntry {
                        obj_name: [1, 0, 1, 8, 0, 255],
                        status: 1835012,
                        val_time: SecIndex(0),
                        unit: 30,
                        scaler: -1,
                        value: 23536569,
                    },
                    ListEntry {
                        obj_name: [1, 0, 1, 8, 1, 255],
                        val_time: SecIndex(0),
                        unit: 30,
                        scaler: -1,
                        value: 386100,
                    },
                    ListEntry {
                        obj_name: [1, 0, 1, 8, 2, 255],
                        val_time: SecIndex(0),
                        unit: 30,
                        scaler: -1,
                        value: 23150469,
                    },
                    ListEntry {
                        obj_name: [1, 0, 2, 8, 0, 255],
                        val_time: SecIndex(0),
                        unit: 30,
                        scaler: -1,
                        value: 0,
                    },
                    ListEntry {
                        obj_name: [1, 0, 16, 7, 0, 255],
                        val_time: SecIndex(0),
                        unit: 27,
                        scaler: -2,
                        value: 579,
                    },
                ],
            },
        },
        Message {
            transaction_id: [221, 37, 175, 1],
            group_id: 0,
            abort_on_error: 0,
            message_body: CloseResponse,
        },
    ],
)
Err(
    DiscardedBytes(
        82,
    ),
)

