tests/snapshots/libsml_testing__files@EMH-ED300L_delivery.bin.snap
---
source: tests/libsml-testing.rs
expression: s
input_file: tests/libsml-testing/EMH-ED300L_delivery.bin
---
Err(
    DiscardedBytes(
        1420,
    ),
)
Ok(
    [
        Message {
            transaction_id: [0, 22, 4, 83, 15, 108],
            group_id: 0,
            abort_on_error: 0,
            message_body: OpenResponse {
                req_file_id: [0, 22, 15, 101, 5, 36],
                server_id: [6, 69, 77, 72, 1, 2, 113, 86, 205, 69],
            },
        },
        Message {
            transaction_id: [0, 22, 4, 83, 15, 109],
            group_id: 0,
            abort_on_error: 0,
            message_body: GetListResponse {
                server_id: [6, 69, 77, 72, 1, 2, 113, 86, 205, 69],
                act_sensor_time: SecIndex(258317595),
                val_list: [
                    ListEntry {
                        obj_name: [129, 129, 199, 130, 3, 255],
                        value: [69, 77, 72],
                    },
                    ListEntry {
                        obj_name: [1, 0, 0, 0, 9, 255],
                        value: [6, 69, 77, 72, 1, 2, 113, 86, 205, 69],
                    },
                    ListEntry {
                        obj_name: [1, 0, 1, 8, 0, 255],
                        status: 432u16,
                        unit: 30,
                        scaler: -1,
                        value: 172436756i64,
                    },
                    ListEntry {
                        obj_name: [1, 0, 1, 8, 1, 255],
                        unit: 30,
                        scaler: -1,
                        value: 172436756i64,
                    },
                    ListEntry {
                        obj_name: [1, 0, 1, 8, 2, 255],
                        unit: 30,
                        scaler: -1,
                        value: 0i64,
                    },
                    ListEntry {
                        obj_name: [1, 0, 15, 7, 0, 255],
                        unit: 27,
                        scaler: -1,
                        value: 1266i32,
                    },
                    ListEntry {
                        obj_name: [129, 129, 199, 130, 5, 255],
                        value: [232, 48, 81, 239, 24, 163, 136, 220, 11, 70, 5, 219, 255, 47, 39, 185, 203, 203, 128, 163, 178, 149, 253, 156, 122, 80, 22, 212, 39, 116, 178, 208, 134, 219, 177, 87, 60, 190, 25, 56, 66, 66, 152, 64, 237, 219, 6, 160],
                    },
                ],
            },
        },
        Message {
            transaction_id: [0, 22, 4, 83, 15, 112],
            group_id: 0,
            abort_on_error: 0,
            message_body: CloseResponse,
        },
    ],
)
Ok(
    [
        Message {
            transaction_id: [0, 22, 4, 83, 15, 114],
            group_id: 0,
            abort_on_error: 0,
            message_body: OpenResponse {
                req_file_id: [0, 22, 15, 101, 5, 38],
                server_id: [6, 69, 77, 72, 1, 2, 113, 86, 205, 69],
            },
        },
        Message {
            transaction_id: [0, 22, 4, 83, 15, 115],
            group_id: 0,
            abort_on_error: 0,
            message_body: GetListResponse {
                server_id: [6, 69, 77, 72, 1, 2, 113, 86, 205, 69],
                act_sensor_time: SecIndex(258317599),
                val_list: [
                    ListEntry {
                        obj_name: [129, 129, 199, 130, 3, 255],
                        value: [69, 77, 72],
                    },
                    ListEntry {
                        obj_name: [1, 0, 0, 0, 9, 255],
                        value: [6, 69, 77, 72, 1, 2, 113, 86, 205, 69],
                    },
                    ListEntry {
                        obj_name: [1, 0, 1, 8, 0, 255],
                        status: 432u16,
                        unit: 30,
                        scaler: -1,
                        value: 172436756i64,
                    },
                    ListEntry {
                        obj_name: [1, 0, 1, 8, 1, 255],
                        unit: 30,
                        scaler: -1,
                        value: 172436756i64,
                    },
                    ListEntry {
                        obj_name: [1, 0, 1, 8, 2, 255],
                        unit: 30,
                        scaler: -1,
                        value: 0i64,
                    },
                    ListEntry {
                        obj_name: [1, 0, 15, 7, 0, 255],
                        unit: 27,
                        scaler: -1,
                        value: 1265i32,
                    },
                    ListEntry {
                        obj_name: [129, 129, 199, 130, 5, 255],
                        value: [232, 48, 81, 239, 24, 163, 136, 220, 11, 70, 5, 219, 255, 47, 39, 185, 203, 203, 128, 163, 178, 149, 253, 156, 122, 80, 22, 212, 39, 116, 178, 208, 134, 219, 177, 87, 60, 190, 25, 56, 66, 66, 152, 64, 237, 219, 6, 160],
                    },
                ],
            },
        },
        Message {
            transaction_id: [0, 22, 4, 83, 15, 118],
            group_id: 0,
            abort_on_error: 0,
            message_body: CloseResponse,
        },
    ],
)
Err(
    DiscardedBytes(
        2028,
    ),
)
Err(
    DiscardedBytes(
        16,
    ),
)

