tests/snapshots/libsml_testing__files@EMH_eHZ-HW8E2A5L0EK2P.bin.snap
---
source: tests/libsml-testing.rs
assertion_line: 80
expression: s
input_file: tests/libsml-testing/EMH_eHZ-HW8E2A5L0EK2P.bin
---
Ok(299)
Ok(299)
Ok(299)
Ok(299)
Ok(299)
Ok(299)
Ok(299)
Ok(299)
Ok(299)
Ok(299)
Ok(299)
Ok(299)
Err(DiscardedBytes(304))

